force-app/main/default/objects/Quiz__c/Quiz__c.object-meta.xml
<CustomObject>
    <label>Quiz</label>
    <nameField>
        <displayFormat>QZ-{0}</displayFormat>
        <label>Quiz Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quizzes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>