force-app/main/default/objects/Quiz__c/fields/Assign_Weights__c.field-meta.xml
<CustomField>
    <fullName>Assign_Weights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Weights</label>
    <type>Checkbox</type>
</CustomField>