force-app/main/default/objects/Quiz__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>