force-app/main/default/objects/Quiz__c/fields/Passing_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Passing_Percentage__c</fullName>
    <label>Passing Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>