force-app/main/default/objects/Quiz__c/fields/Randomize_Question__c.field-meta.xml
<CustomField>
    <fullName>Randomize_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Randomize Question</label>
    <type>Checkbox</type>
</CustomField>