force-app/main/default/objects/Quiz__c/fields/Show_feedback__c.field-meta.xml
<CustomField>
    <fullName>Show_feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show feedback</label>
    <type>Checkbox</type>
</CustomField>