force-app/main/default/objects/Quiz__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Passing_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>